# sipXhotprovisioning

./: .classpath  .project  Makefile.am  README  common.am  configure.ac  sipxhotprovisioning.spec.in
config-plugin/: Makefile.am  sipxplugin.beans.xml
config-plugin/src/org/sipfoundry/provisioning/hot/: HotProvisionable.java  HotProvisioningManager.java  ScheduledHotProvisioningManagerImpl.java
